# jobspy-cowork-mcp

./: .env.example  Dockerfile  README.md  example_search.py  pyproject.toml  render.yaml  requirements.txt  server.py  sources.py
deploy/: caddy-setup.sh  oracle-cloud-init.yaml
